--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zeus React Bolierplate</title>
+  <title>Pivot-Design used Zeus React Bolierplate</title>
 </head>
+
 <body>
   <div id="root"></div>
 </body>
+
 </html>
